[package]
name = "edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive", "env"] }
tokio = { version = "1.23.0", features = ["full"] }
